# yoko

./: .dockerignore  .env.example  .gitignore  Dockerfile  ReadMe.md  api.py  api_setup.md  api_svg.py  docker-compose.yaml  files_with_json.py  gui.py  pyproject.toml  requirement.txt  requirements.txt  start.sh  test.py  test_garmentcode.py
assets/css/: no-scroll.css
assets/design_params/: default.yaml  t-shirt.yaml
assets/garment_programs/: bodice.py
data/pattern_inputs/text/: input_20250101_182214.txt  input_20250101_182400.txt  input_20250101_182523.txt  input_20250102_093439.txt
db/: db_config.py  models.py  repositories.py  services.py
db-backup-cron-app/: README.md  db-cron.py  steps-to-configure-cron.txt
db/services/: chat_service.py  file_service.py  message_service.py  user_service.py
docs/: Dockerization.md  Installation.md  Running_data_generation.md
gui/: callbacks.py  gui_pattern.py  mmua.py  pattern_parser.py  utils.py
pygarment/meshgen/render/: texture_utils.py
pygarment/pattern/: wrappers.py
