[tool.poetry]
name = "pygarment"
version = "0.1.0"
description = ""
authors = ["subash-19 <subashs20018@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
pygarment ="2.18.0"
openai="1.59.3"
rich="13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
